--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,60 +5,9 @@
 </div>
 
 <% event_create_button_class = "btn btn-hiddeste" %>
-<% event_join_button_class   = "btn btn-hiddeste" %>
-<% event_leave_button_class  = "btn btn-danger" %>
-<% event_remove_button_class = "btn btn-danger" %>
 
 <% if logged_in? %>
   <%= button_to "Create New Event", { :action => "new" }, :class => event_create_button_class, method: :get %>
 <% end %>
 
-<table class="table table-striped table-condensed">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:place) %></th>
-      <th><%= model_class.human_attribute_name(:date) %></th>
-      <th><%= model_class.human_attribute_name(:organizer_id) %></th>
-      <% if current_user %>
-        <th>Joined?</th>
-        <th><%=t '.actions', :default => t("helpers.actions") %></th>
-      <% end %>
-    </tr>
-  </thead>
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.id %></td>
-        <td><%= link_to event.name, url_for(action: :show, id: event.id) %></td>
-        <td><%= event.place %></td>
-        <td><%= event.date %></td>
-        <td><%= event.organizer_name %></td>
-
-        <% if current_user %>
-          <% if event.users.include?(current_user) %>
-            <td><i class="icon-ok"></i></td>
-            <% user_event = UserEvent.where(user_id: current_user.id, event_id: event.id).first %>
-            <% action  = { controller: "user/events", action: :destroy, id: user_event.id } %>
-            <% options = { :class => event_leave_button_class, method: :delete } %>
-            <td>
-              <% if current_user.id == event.organizer_id %>
-                <%= button_to "Leave", action, options.merge( disabled: true ) %>
-              <% else %>
-                <%= button_to "Leave", action, options %>
-              <% end %>
-            </td>
-          <% else %>
-            <td></td>
-            <td>
-              <% action  = { controller: "user/events", action: :create, event_id: event.id } %>
-              <% options = { :class => event_join_button_class, method: :post } %>
-              <%= button_to "Join", action, options %>
-            </td>
-          <% end %>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render :partial => 'index' %>
