--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -178,7 +178,7 @@ table, p {
       a {
         color: @hiddeste-white;
       }
-      a:hover {
+      a:hover, a:focus {
         color: @hiddeste-dark-black;
         background-color: @hiddeste-white;
         background-image: -moz-linear-gradient(top, @hiddeste-white, @hiddeste-white);
