--- a/app/views/events/_index.html.erb
+++ b/app/views/events/_index.html.erb
@@ -2,6 +2,12 @@
 
 <% event_join_button_class   = "btn btn-hiddeste" %>
 <% event_leave_button_class  = "btn btn-danger" %>
+<% event_create_button_class = "btn btn-hiddeste" %>
+
+<% if logged_in? %>
+  <% event_create_options = { controller: :events, action: :new } %>
+  <%= button_to "Create New Event", event_create_options, :class => event_create_button_class, method: :get %>
+<% end %>
 
 <% unless @events.empty? %>
   <table class="table table-striped table-condensed">
@@ -15,7 +21,7 @@
         <% if current_user %>
           <th>Organizer?</th>
           <th>Joined?</th>
-          <th><%=t '.actions', :default => t("helpers.actions") %></th>
+          <th><%=t '.actions', default: t("helpers.actions") %></th>
         <% end %>
       </tr>
     </thead>
@@ -23,13 +29,13 @@
       <% @events.each do |event| %>
         <tr>
           <td><%= event.id %></td>
-          <td><%= link_to event.name, url_for(action: :show, id: event.id) %></td>
+          <td><%= link_to event.name, url_for(controller: :events, action: :show, id: event.id) %></td>
           <td><%= event.place %></td>
           <td><%= event.date %></td>
           <td><%= event.organizer_name %></td>
           <% if current_user %>
             <td>
-              <% if current_user.id == event.organizer_id %>
+              <% if event.organizer?(current_user) %>
                 <i class="icon-ok"></i>
               <% end %>
             </td>
@@ -39,7 +45,7 @@
               <% action  = { controller: "user/events", action: :destroy, id: user_event.id } %>
               <% options = { :class => event_leave_button_class, method: :delete } %>
               <td>
-                <% if current_user.id == event.organizer_id %>
+                <% if event.organizer?(current_user) %>
                   <%= button_to "Leave", action, options.merge( disabled: true ) %>
                 <% else %>
                   <%= button_to "Leave", action, options %>
