--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -99,7 +99,17 @@ table, p {
 
 // サインイン
 .signin {
-  //margin-left: 30px;
+  .checkbox {
+    margin-left: 160px;
+  }
+  .facebook {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  .twitter {
+    margin-top: 68px;
+    margin-left: 20px;
+  }
 }
 
 // プライバシーポリシー
